made hozontal navbar usiong only css

--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Schdeule</title>
   </head>
   <body>
     <div class="wrapper">
       <div>
         <nav>
-          <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>People</li>
-            <li>Contact</li>
+          <ul class="right">
+            <li><a href="https://www.google.com">Google</a></li>
+            <li><a href="https://www.twitter.com">Twitter</a></li>
+            <li><a href="https://www.instagram.com">Instagram</a></li>
+            <li><a href="https://www.youtube.com">Youtube</a></li>
+          </ul>
+          <ul class="left">
+            <li>LOGO</li>
           </ul>
         </nav>
       </div>
