playing around with rotating text and made navbar hoizontal with left and right floats as well

--- a/index.html
+++ b/index.html
@@ -8,22 +8,32 @@
   </head>
   <body>
     <div class="wrapper">
-      <div>
-        <nav>
-          <ul class="right">
-            <li><a href="https://www.google.com">Google</a></li>
-            <li><a href="https://www.twitter.com">Twitter</a></li>
-            <li><a href="https://www.instagram.com">Instagram</a></li>
-            <li><a href="https://www.youtube.com">Youtube</a></li>
-          </ul>
-          <ul class="left">
-            <li>LOGO</li>
-          </ul>
-        </nav>
-      </div>
-      <div>
+      <nav>
+        <ul class="right">
+          <li><a href="https://www.google.com">Google</a></li>
+          <li><a href="https://www.twitter.com">Twitter</a></li>
+          <li><a href="https://www.instagram.com">Instagram</a></li>
+          <li><a href="https://www.youtube.com">Youtube</a></li>
+        </ul>
+        <ul class="left">
+          <li><a>LOGO</a></li>
+        </ul>
+      </nav>
+      <div class="main">
+        <h1>Welcome</h1>
+        <h1>Welcome</h1>
+        <h1>Welcome</h1>
+        <h1>Welcome</h1>
+        <h1>Welcome</h1>
+        <h1>Welcome</h1>
         <h1>Welcome</h1>
       </div>
+      <div class="fixed">
+        <h3>
+          This is a random text that will stay still
+        </h3>
+      </div>
+      <div></div>
     </div>
   </body>
 </html>
